--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
-    "react-select": "^5.7.3"
+    "react-select": "^5.7.3",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
