--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
     "react-select": "^5.7.3",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
