--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.12.0",
     "react-select": "^5.7.3",
     "sweetalert2": "^11.7.12",
