--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
@@ -24,6 +25,7 @@
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.12.0",
     "react-select": "^5.7.3",
+    "recharts": "^2.6.2",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
